Colors fixed for better readability

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -8,7 +8,7 @@ body {
 /* For styling the game script text */
 .gameScript {
     font-size: 24px;
-    color: white;
+    color: rgb(253, 223, 223);
     font-weight: bold;
     text-shadow: 2px 1px 4px rgb(0, 0, 0);
 }
@@ -18,7 +18,7 @@ body {
     font-size: 25px;
     font-weight: bold;
     text-shadow: 3px 1px 4px rgb(0, 0, 0);
-    color: rgb(255, 103, 103);
+    color: rgb(255, 253, 253);
 }
 
 /* For the game container element*/
